package.json updated

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jeyaprabakar01.github.io/loop-studios",
+  "homepage": "https://jeyaprabakar01.github.io/loop-studios-using-CRA",
   "name": "loop-studiosp",
   "version": "0.1.0",
   "private": true,
